<resources>
    <string name="error_unknown">Unknown error</string>
    <string name="app_name">kepkiApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sort">Сортировка</string>
    <string name="popular">Популярные</string>
    <string name="new_products">Новинки</string>
    <string name="cheap_ones_first">Сначала дешевые</string>
    <string name="use">Применить</string>
    <string name="gold_ones_first">Сначала дорогие</string>
    <string name="details_orders">Детали заказа</string>
    <string name="new_era">New era</string>
    <string name="golden_state_warriors_icon">Golden State Warriors Icon</string>
    <string name="_59fifty_fitted_cap">59FIFTY Fitted Cap</string>
    <string name="_2500">2500 сом</string>
    <string name="date_order">Дата заказа:</string>
    <string name="date_sent">Дата отправки:</string>
    <string name="address">Адрес:</string>
    <string name="search">Поиск</string>
    <string name="_2021">Самая яркая коллекция 2021</string>
    <string name="popular_brends">Популярные Бренды</string>
    <string name="adidas">Adidas</string>
    <string name="nike">Nike</string>
    <string name="vans">Vans</string>
    <string name="bestsellers">Бестселлеры</string>
    <string name="watch_all">Смотреть все</string>
    <string name="san_francisco_baseball">San Francisco Baseball</string>
    <string name="summa">3800 сом</string>
    <string name="supreme_new_era"><![CDATA[SUPREME & NEW ERA]]></string>
    <string name="stocks">Акции</string>
    <string name="collaboration">collaboration</string>
    <string name="mclaren">НОВАЯ СЕРИЯ \McLaren</string>
    <string name="_4600">4600 сом</string>
    <string name="profile">Профиль</string>
    <string name="my_acc">Мой аккаунт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">email</string>
    <string name="name">имя</string>
    <string name="my_orders">Мои заказы</string>
    <string name="phone_number">number phone</string>
    <string name="location">адрес</string>
    <string name="Редактироватьпрофиль">Редактировать профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_2500_сом">2500 сом</string>
    <string name="New_era">New Era</string>
    <string name="Размер">Размер</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="L">L</string>
    <string name="XL">XL</string>
    <string name="Description">Кепка Golden State Warriors Icon 59FIFTY Fitted Cap имеет вышитый логотип Warriors на передних панелях, а также надпись World Champs с дополнительными командными нашивками и вышивкой по всей остальной части короны. Дополнительные детали включают цветной логотип NBA команды сзади и серый нижний слой.</string>
    <string name="_Похожие_товары_">Похожие товары</string>
    <string name="_Добавить_в_корзину_">Добавить в Корзину</string>
    <string name="Adidas">Adidas</string>
    <string name="San_francisco_baseball">San Francisco Baseball</string>
    <string name="_3800_som_">3800 сом</string>
    <string name="Golden_State">Golden State Warriors\nIcon 59FIFTY Fitted Cap</string>
    <string name="auth">Войти</string>
    <string name="number">Номер</string>
    <string name="registration">Регистрация</string>
    <string name="or">или</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="sample_number">+996 999 999 999</string>
    <string name="code_message_text">Введите 6-значный код, отправленный на номер</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="forgot_password_question">Забыли пароль?</string>
    <string name="restore">Восстановить</string>
    <string name="enter_reg_number">Введите номер, указанный при регистрации. Вам будет отправлен код подтверждения</string>
    <string name="send">Отправить</string>
    <string name="password">Пароль</string>
    <string name="are_you_not_reg">Вы не зарегистрированы?</string>
    <string name="todo">TODO</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="custom_caps">CUSTOM CAPS</string>
    <string name="cap_shop">Магазин кепок</string>
    <string name="sign_up">Войти</string>
    <string name="Name">Имя</string>
    <string name="number_phone">Номер телефона</string>
    <string name="pass">Пароль</string>
    <string name="and">или</string>
    <string name="write_name">Потвердить номер телефона</string>
    <string name="have_acc">Уже есть аккаунт?</string>
    <string name="forgot_paa">Забыли пароль?</string>
    <string name="not_register">Еще не зарегистрированы?</string>
    <string name="buy">Купить</string>
    <string name="sum">Сумма</string>
    <string name="delivery">Доставка</string>
    <string name="basket">Корзина</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_89475934">89475934</string>
    <string name="date">Дата</string>
    <string name="_03_06_2021">03.06.2021</string>
    <string name="status">Статус:</string>
    <string name="status_mode">В дороге</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="san_fransisco_baseball">San Fransisco Baseball</string>
    <string name="_0">0</string>
</resources>