<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_acc.MyAccFragment">

    <TextView
        android:id="@+id/txt_my_acc"
        android:layout_marginTop="@dimen/thirty_dp"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/my_acc"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_eight_sp"
        />

    <TextView
        android:id="@+id/profile"
        android:layout_marginTop="@dimen/forty_dp"
        app:layout_constraintTop_toBottomOf="@id/txt_my_acc"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:drawablePadding="@dimen/sixteen_dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:drawableStartCompat="@drawable/ic_user" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/profile"
        android:id="@+id/order"
        android:layout_marginTop="@dimen/eighteen_dp"
        android:drawablePadding="@dimen/sixteen_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_orders"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/twenty_two_dp"
        app:drawableStartCompat="@drawable/ic_bag" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/order"
        android:layout_marginTop="@dimen/eighteen_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_width="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp"
        android:drawablePadding="@dimen/eighteen_dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/twenty_four_dp"
        app:drawableStartCompat="@drawable/ic_location" />


</androidx.constraintlayout.widget.ConstraintLayout>
