<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forty_dp"
        android:layout_marginStart="@dimen/twenty_dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/thirty_dp"
        android:layout_marginBottom="@dimen/thirty_six_dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_eight_sp"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintStart_toStartOf="@id/bg_profileImageView" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/nameHintEditText"
        android:layout_marginVertical="@dimen/forty_dp"
        android:id="@+id/emailHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:drawablePadding="@dimen/ten_dp"
        android:layout_marginStart="@dimen/twenty_two_dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/ic_message" />

    <TextView
        android:id="@+id/number_phoneHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/twenty_four_dp"
        android:text="@string/number_phone"
        android:drawablePadding="@dimen/ten_dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="@id/emailHintTextView"
        app:layout_constraintTop_toBottomOf="@id/emailHintTextView"
        app:drawableStartCompat="@drawable/ic_phone" />

    <TextView
        app:layout_constraintStart_toStartOf="@id/emailHintTextView"
        app:layout_constraintTop_toBottomOf="@id/number_phoneHintTextView"
        android:layout_marginVertical="@dimen/twenty_two_dp"
        android:id="@+id/addressHintTextView"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:drawablePadding="@dimen/ten_dp"
        android:textSize="@dimen/twenty_sp"
        app:drawableStartCompat="@drawable/ic_location" />

    <TextView
        app:layout_constraintBottom_toBottomOf="@id/bg_profileImageView"
        app:layout_constraintTop_toTopOf="@id/bg_profileImageView"
        app:layout_constraintStart_toEndOf="@id/bg_profileImageView"
        android:layout_marginStart="@dimen/twelve_dp"
        android:id="@+id/nameHintEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_sp"
        />


    <ImageView
        android:layout_marginTop="@dimen/thirty_six_dp"
        android:id="@+id/bg_profileImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:background="@drawable/bg_orders"
        android:padding="@dimen/twelve_dp"
        android:src="@drawable/ic_bag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <com.google.android.material.button.MaterialButton
        android:paddingVertical="@dimen/sixteen_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginHorizontal="@dimen/twenty_dp"
        app:cornerRadius="@dimen/forty_dp"
        app:layout_constraintTop_toBottomOf="@id/addressHintTextView"
        android:backgroundTint="@color/yellow"
        android:text="@string/Редактироватьпрофиль" />
</androidx.constraintlayout.widget.ConstraintLayout>