<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.restore_password.RestorePasswordFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/log"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_restore_pass"
        android:layout_marginTop="@dimen/iv_tv_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/restore_password"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/twenty_eight_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:layout_marginLeft="@dimen/overall_indent"
        android:layout_marginRight="@dimen/overall_indent"
        android:fontFamily="@font/sf_ui_display"/>

    <EditText
        android:id="@+id/et_registration_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/overall_indent"
        app:layout_constraintTop_toBottomOf="@+id/tv_restore_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_number_height"
        android:layout_marginTop="@dimen/et_number_top"
        android:layout_marginEnd="@dimen/ic_number_margin"
        android:hint="@string/sample_number"
        android:background="@color/white"
        android:textColor="@color/light_gray"
        android:inputType="number"
        android:importantForAutofill="no" />


    <View
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/half_dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/three_dp"
        android:layout_marginLeft="@dimen/overall_indent"
        android:layout_marginRight="@dimen/overall_indent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_number" />

    <TextView
        app:layout_constraintEnd_toEndOf="@id/divider_line"
        android:paddingEnd="@dimen/forty"
        app:layout_constraintTop_toBottomOf="@+id/divider_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/overall_indent"
        android:layout_marginRight="@dimen/overall_indent"
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/or_divider_margin"
        android:textColor="@color/custom_black"
        android:text="@string/enter_reg_number"
        android:fontFamily="@font/sf_ui_text"
        />

    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/forty_dp"
        android:layout_width="wrap_content"
        android:paddingVertical="@dimen/sixteen_dp"
        android:paddingHorizontal="@dimen/forty"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/btn_radius"
        android:backgroundTint="@color/yellow"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteen_sp"
        android:gravity="center"
        android:fontFamily="@font/sf_ui_text" />
</androidx.constraintlayout.widget.ConstraintLayout>